kubernetes/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ${appName}
  labels:
    k8s-app: ${appName}
  namespace: default
spec:
  replicas: 1
  strategy:
    type: Recreate
    #rollingUpdate:##由于replicas为3,则整个升级,pod个数在2-4个之间
    #   #  maxSurge: 3 #滚动升级时会先启动3个pod
    #      #  maxUnavailable: 1 #滚动升级时允许的最大Unavailable的pod个数
  selector:
    matchLabels:
      k8s-app: ${appName}
  template:
    metadata:
      labels:
        k8s-app: ${appName}
    spec:
      containers:
      - name: ${appName}
        image: ${registryAddress}/${appName}:${BUILD_TIMESTAMP}
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
        resources: 
          requests:
           # cpu: 0.05
            memory: 256Mi
          limits:
           # cpu: 0.1
            memory: 512Mi
      restartPolicy: Always
