kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${appName}
spec:
  ports:
    - port: 8080
  selector:
    k8s-app: ${appName}
